--- a/README.Rmd
+++ b/README.Rmd
@@ -9,7 +9,7 @@ knitr::opts_chunk$set(collapse = TRUE, comment = "#>", fig.path = "README-")
 ```
 
   <!-- badges: start -->
-  [![R-CMD-check](https://github.com/emf-creaf/medfatetraits/workflows/R-CMD-check/badge.svg)](https://github.com/emf-creaf/medfatetraits/actions)
+  [![R-CMD-check](https://github.com/emf-creaf/medfatetraits/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/emf-creaf/medfatetraits/actions/workflows/R-CMD-check.yaml)
   <!-- badges: end -->
 
 ## Introduction
