--- a/README.Rmd
+++ b/README.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "medfatetraits - From plant trait data to model parameters"
+title: "medfatetraits - from plant traits to model parameters"
 output: github_document
 ---
 
@@ -18,13 +18,40 @@ Package **medfatetraits** is designed to facilitate creating species parameter t
 
 ## Package installation
 
+Since both packages evolve together, installing **medfatetraits** normally requires an up-to-date version of **medfate**. 
+
 The latest stable versions GitHub as follows (required package `remotes`` should be installed/updated first):
 
 ```{r installation, eval = FALSE}
 remotes::install_github("emf-creaf/medfatetraits")
 ```
 
+
 ## Usage
 
 The package is still under active development. 
+
+## Documentation
+
+A number of *vignettes* illustrate how to initialize inputs and run simulation models in **medfatetraits**. These can be found at the package [website](https://emf-creaf.github.io/medfatetraits/).
+
+## Companion R packages
+
+The development of **medfatetraits** is intended to complement other packages of the medfate modelling framework:
+
+  + Package [**medfateland**](https://emf-creaf.github.io/medfateland) extends **medfate** by allowing simulations to be performed in a spatially explicit context.
+  + Package [**meteoland**](https://emf-creaf.github.io/meteoland) allows generating daily weather input for simulation models in **medfate** and **medfateland**.
+
+```{r, out.width='60%', fig.align="center", echo=FALSE}
+knitr::include_graphics("man/figures/packages.png")
+```
+
+
+## Authorship
+
+The set of R packages are developed and maintained by the [*Ecosystem Modelling Facility*](https://emf.creaf.cat) unit at [*CREAF*](https://www.creaf.cat/) (in Spain), in close collaboration with researchers from [*URFM-INRAE*](https://www6.paca.inrae.fr/ecologie_des_forets_mediterraneennes/) (in France) and [*CTFC*](https://www.ctfc.cat/) (in Spain).
+
+```{r, out.width='60%', fig.align="center", echo=FALSE}
+knitr::include_graphics("man/figures/logos.png")
+```
 
