--- a/vignettes/SpeciesParameterization.Rmd
+++ b/vignettes/SpeciesParameterization.Rmd
@@ -5,7 +5,7 @@ date: "`r Sys.Date()`"
 output: 
   rmarkdown::html_document:
     toc: TRUE
-bibliography: medfatetraits.bib
+bibliography: traits4models.bib
 params:
   spparams_rebuild: FALSE
   IFN_rebuild: FALSE
@@ -15,7 +15,7 @@ params:
 
 ### Aim
 
-This vignette describes the procedures used to obtain the species parameter data tables (such as `SpParamsES`, `SpParamsFR` and `SpParamsUS` included in package **medfatetraits**). Each species parameter table is meant to be used on forest plot locations belonging to a given National Forest Inventory (NFI). Hence, the taxon entities chosen (rows in `SpParams`) are intended to represent plant taxa reported in the NFI. 
+This vignette describes the procedures used to obtain the species parameter data tables (such as `SpParamsES`, `SpParamsFR` and `SpParamsUS` included in package **traits4models**). Each species parameter table is meant to be used on forest plot locations belonging to a given National Forest Inventory (NFI). Hence, the taxon entities chosen (rows in `SpParams`) are intended to represent plant taxa reported in the NFI. 
 
 >**IMPORTANT**: The vignette is not self-contained, in the sense that it cannot be reproduced without access to data sets that are not included. Nevertheless, it is intended to serve as example of species parameterization for other regions.
 
@@ -31,10 +31,10 @@ If the version at CRAN is older, the package should be installed from GitHub via
 remotes::install_github("emf-creaf/medfate")
 ```
 
-Package **medfatetraits** is required for the species parameterization process, as it includes several functions that facilitate parsing data sources into parameter values. Package **medfatetraits** is installed only from GitHub:
+Package **traits4models** is required for the species parameterization process, as it includes several functions that facilitate parsing data sources into parameter values. Package **traits4models** is installed only from GitHub:
 
 ```{r, eval = FALSE}
-remotes::install_github("emf-creaf/medfatetraits")
+remotes::install_github("emf-creaf/traits4models")
 ```
 
 Package **medfuels** is also needed because it includes allometric coefficients for Mediterranean shrub species. As before, package **medfuels** is installed only from GitHub:
@@ -43,10 +43,10 @@ Package **medfuels** is also needed because it includes allometric coefficients 
 remotes::install_github("spif-ctfc/medfuels")
 ```
 
-Once we have **medfate**, **medfatetraits** and  **medfuels**, we load them and other common packages that we will employ in this vignette:
+Once we have **medfate**, **traits4models** and  **medfuels**, we load them and other common packages that we will employ in this vignette:
 ```{r message=FALSE}
 library(medfate)
-library(medfatetraits)
+library(traits4models)
 library(medfuels)
 # library(IFNread)
 library(tidyverse)
