--- a/README.Rmd
+++ b/README.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(collapse = TRUE, comment = "#>", fig.path = "README-")
 
 ## Introduction
 
-Package **traits4models** is designed to facilitate creating species parameter tables for package [medfate](https://github.com/emf-creaf/medfate). Specifically utility functions are provided to harmonize plant trait data bases and defining tables from them.
+Package **traits4models** is designed to facilitate creating species parameter tables for process-based models such as those of package [medfate](https://github.com/emf-creaf/medfate). Specifically utility functions are provided to harmonize plant trait data bases and defining tables from them.
 
 ## Package installation
 
