--- a/vignettes/traits4models.bib
+++ b/vignettes/traits4models.bib
@@ -1,4 +1,21 @@
 
+@article{Bartlett2016,
+	title = {The correlations and sequence of plant stomatal, hydraulic, and wilting responses to drought.},
+	volume = {113},
+	issn = {1091-6490},
+	url = {http://www.ncbi.nlm.nih.gov/pubmed/27807136},
+	doi = {10.1073/pnas.1604088113},
+	abstract = {Climate change is expected to exacerbate drought for many plants, making drought tolerance a key driver of species and ecosystem responses. Plant drought tolerance is determined by multiple traits, but the relationships among traits, either within individual plants or across species, have not been evaluated for general patterns across plant diversity. We synthesized the published data for stomatal closure, wilting, declines in hydraulic conductivity in the leaves, stems, and roots, and plant mortality for 262 woody angiosperm and 48 gymnosperm species. We evaluated the correlations among the drought tolerance traits across species, and the general sequence of water potential thresholds for these traits within individual plants. The trait correlations across species provide a framework for predicting plant responses to a wide range of water stress from one or two sampled traits, increasing the ability to rapidly characterize drought tolerance across diverse species. Analyzing these correlations also identified correlations among the leaf and stem hydraulic traits and the wilting point, or turgor loss point, beyond those expected from shared ancestry or independent associations with water stress alone. Further, on average, the angiosperm species generally exhibited a sequence of drought tolerance traits that is expected to limit severe tissue damage during drought, such as wilting and substantial stem embolism. This synthesis of the relationships among the drought tolerance traits provides crucial, empirically supported insight into representing variation in multiple traits in models of plant and ecosystem responses to drought.},
+	number = {46},
+	journal = {Proceedings of the National Academy of Sciences of the United States of America},
+	author = {Bartlett, Megan K and Klein, Tamir and Jansen, Steven and Choat, Brendan and Sack, Lawren},
+	year = {2016},
+	pmid = {27807136},
+	keywords = {drought tolerance, leaf hydraulics, stem hydraulics, stomatal closure, turgor loss point},
+	pages = {13098--13103},
+	file = {Bartlett et al. - 2016 - The correlations and sequence of plant stomatal, h.pdf:/home/miquel/Zotero/storage/3UTM5IVT/Bartlett et al. - 2016 - The correlations and sequence of plant stomatal, h.pdf:application/pdf},
+}
+
 @article{Kattge2020,
 	title = {{TRY} plant trait database – enhanced coverage and open access},
 	volume = {26},
@@ -10,7 +27,28 @@
 	author = {Kattge, Jens and Bönisch, Gerhard and Díaz, Sandra and Lavorel, Sandra and Prentice, Iain Colin and Leadley, Paul and Tautenhahn, Susanne and Werner, Gijsbert D.A. and Aakala, Tuomas and Abedi, Mehdi and Acosta, Alicia T.R. and Adamidis, George C. and Adamson, Kairi and Aiba, Masahiro and Albert, Cécile H. and Alcántara, Julio M. and Alcázar C, Carolina and Aleixo, Izabela and Ali, Hamada and Amiaud, Bernard and Ammer, Christian and Amoroso, Mariano M. and Anand, Madhur and Anderson, Carolyn and Anten, Niels and Antos, Joseph and Apgaua, Deborah Mattos Guimarães and Ashman, Tia Lynn and Asmara, Degi Harja and Asner, Gregory P. and Aspinwall, Michael and Atkin, Owen and Aubin, Isabelle and Baastrup-Spohr, Lars and Bahalkeh, Khadijeh and Bahn, Michael and Baker, Timothy and Baker, William J. and Bakker, Jan P. and Baldocchi, Dennis and Baltzer, Jennifer and Banerjee, Arindam and Baranger, Anne and Barlow, Jos and Barneche, Diego R. and Baruch, Zdravko and Bastianelli, Denis and Battles, John and Bauerle, William and Bauters, Marijn and Bazzato, Erika and Beckmann, Michael and Beeckman, Hans and Beierkuhnlein, Carl and Bekker, Renee and Belfry, Gavin and Belluau, Michael and Beloiu, Mirela and Benavides, Raquel and Benomar, Lahcen and Berdugo-Lattke, Mary Lee and Berenguer, Erika and Bergamin, Rodrigo and Bergmann, Joana and Bergmann Carlucci, Marcos and Berner, Logan and Bernhardt-Römermann, Markus and Bigler, Christof and Bjorkman, Anne D. and Blackman, Chris and Blanco, Carolina and Blonder, Benjamin and Blumenthal, Dana and Bocanegra-González, Kelly T. and Boeckx, Pascal and Bohlman, Stephanie and Böhning-Gaese, Katrin and Boisvert-Marsh, Laura and Bond, William and Bond-Lamberty, Ben and Boom, Arnoud and Boonman, Coline C.F. and Bordin, Kauane and Boughton, Elizabeth H. and Boukili, Vanessa and Bowman, David M.J.S. and Bravo, Sandra and Brendel, Marco Richard and Broadley, Martin R. and Brown, Kerry A. and Bruelheide, Helge and Brumnich, Federico and Bruun, Hans Henrik and Bruy, David and Buchanan, Serra W. and Bucher, Solveig Franziska and Buchmann, Nina and Buitenwerf, Robert and Bunker, Daniel E. and Bürger, Jana and Burrascano, Sabina and Burslem, David F.R.P. and Butterfield, Bradley J. and Byun, Chaeho and Marques, Marcia and Scalon, Marina C. and Caccianiga, Marco and Cadotte, Marc and Cailleret, Maxime and Camac, James and Camarero, Jesús Julio and Campany, Courtney and Campetella, Giandiego and Campos, Juan Antonio and Cano-Arboleda, Laura and Canullo, Roberto and Carbognani, Michele and Carvalho, Fabio and Casanoves, Fernando and Castagneyrol, Bastien and Catford, Jane A. and Cavender-Bares, Jeannine and Cerabolini, Bruno E.L. and Cervellini, Marco and Chacón-Madrigal, Eduardo and Chapin, Kenneth and Chapin, F. Stuart and Chelli, Stefano and Chen, Si Chong and Chen, Anping and Cherubini, Paolo and Chianucci, Francesco and Choat, Brendan and Chung, Kyong Sook and Chytrý, Milan and Ciccarelli, Daniela and Coll, Lluís and Collins, Courtney G. and Conti, Luisa and Coomes, David and Cornelissen, Johannes H.C. and Cornwell, William K. and Corona, Piermaria and Coyea, Marie and Craine, Joseph and Craven, Dylan and Cromsigt, Joris P.G.M. and Csecserits, Anikó and Cufar, Katarina and Cuntz, Matthias and da Silva, Ana Carolina and Dahlin, Kyla M. and Dainese, Matteo and Dalke, Igor and Dalle Fratte, Michele and Dang-Le, Anh Tuan and Danihelka, Jirí and Dannoura, Masako and Dawson, Samantha and de Beer, Arend Jacobus and De Frutos, Angel and De Long, Jonathan R. and Dechant, Benjamin and Delagrange, Sylvain and Delpierre, Nicolas and Derroire, Géraldine and Dias, Arildo S. and Diaz-Toribio, Milton Hugo and Dimitrakopoulos, Panayiotis G. and Dobrowolski, Mark and Doktor, Daniel and Dřevojan, Pavel and Dong, Ning and Dransfield, John and Dressler, Stefan and Duarte, Leandro and Ducouret, Emilie and Dullinger, Stefan and Durka, Walter and Duursma, Remko and Dymova, Olga and E-Vojtkó, Anna and Eckstein, Rolf Lutz and Ejtehadi, Hamid and Elser, James and Emilio, Thaise and Engemann, Kristine and Erfanian, Mohammad Bagher and Erfmeier, Alexandra and Esquivel-Muelbert, Adriane and Esser, Gerd and Estiarte, Marc and Domingues, Tomas F. and Fagan, William F. and Fagúndez, Jaime and Falster, Daniel S. and Fan, Ying and Fang, Jingyun and Farris, Emmanuele and Fazlioglu, Fatih and Feng, Yanhao and Fernandez-Mendez, Fernando and Ferrara, Carlotta and Ferreira, Joice and Fidelis, Alessandra and Finegan, Bryan and Firn, Jennifer and Flowers, Timothy J. and Flynn, Dan F.B. and Fontana, Veronika and Forey, Estelle and Forgiarini, Cristiane and François, Louis and Frangipani, Marcelo and Frank, Dorothea and Frenette-Dussault, Cedric and Freschet, Grégoire T. and Fry, Ellen L. and Fyllas, Nikolaos M. and Mazzochini, Guilherme G. and Gachet, Sophie and Gallagher, Rachael and Ganade, Gislene and Ganga, Francesca and García-Palacios, Pablo and Gargaglione, Verónica and Garnier, Eric and Garrido, Jose Luis and de Gasper, André Luís and Gea-Izquierdo, Guillermo and Gibson, David and Gillison, Andrew N. and Giroldo, Aelton and Glasenhardt, Mary Claire and Gleason, Sean and Gliesch, Mariana and Goldberg, Emma and Göldel, Bastian and Gonzalez-Akre, Erika and Gonzalez-Andujar, Jose L. and González-Melo, Andrés and González-Robles, Ana and Graae, Bente Jessen and Granda, Elena and Graves, Sarah and Green, Walton A. and Gregor, Thomas and Gross, Nicolas and Guerin, Greg R. and Günther, Angela and Gutiérrez, Alvaro G. and Haddock, Lillie and Haines, Anna and Hall, Jefferson and Hambuckers, Alain and Han, Wenxuan and Harrison, Sandy P. and Hattingh, Wesley and Hawes, Joseph E. and He, Tianhua and He, Pengcheng and Heberling, Jacob Mason and Helm, Aveliina and Hempel, Stefan and Hentschel, Jörn and Hérault, Bruno and Hereş, Ana Maria and Herz, Katharina and Heuertz, Myriam and Hickler, Thomas and Hietz, Peter and Higuchi, Pedro and Hipp, Andrew L. and Hirons, Andrew and Hock, Maria and Hogan, James Aaron and Holl, Karen and Honnay, Olivier and Hornstein, Daniel and Hou, Enqing and Hough-Snee, Nate and Hovstad, Knut Anders and Ichie, Tomoaki and Igić, Boris and Illa, Estela and Isaac, Marney and Ishihara, Masae and Ivanov, Leonid and Ivanova, Larissa and Iversen, Colleen M. and Izquierdo, Jordi and Jackson, Robert B. and Jackson, Benjamin and Jactel, Hervé and Jagodzinski, Andrzej M. and Jandt, Ute and Jansen, Steven and Jenkins, Thomas and Jentsch, Anke and Jespersen, Jens Rasmus Plantener and Jiang, Guo Feng and Johansen, Jesper Liengaard and Johnson, David and Jokela, Eric J. and Joly, Carlos Alfredo and Jordan, Gregory J. and Joseph, Grant Stuart and Junaedi, Decky and Junker, Robert R. and Justes, Eric and Kabzems, Richard and Kane, Jeffrey and Kaplan, Zdenek and Kattenborn, Teja and Kavelenova, Lyudmila and Kearsley, Elizabeth and Kempel, Anne and Kenzo, Tanaka and Kerkhoff, Andrew and Khalil, Mohammed I. and Kinlock, Nicole L. and Kissling, Wilm Daniel and Kitajima, Kaoru and Kitzberger, Thomas and Kjøller, Rasmus and Klein, Tamir and Kleyer, Michael and Klimešová, Jitka and Klipel, Joice and Kloeppel, Brian and Klotz, Stefan and Knops, Johannes M.H. and Kohyama, Takashi and Koike, Fumito and Kollmann, Johannes and Komac, Benjamin and Komatsu, Kimberly and König, Christian and Kraft, Nathan J.B. and Kramer, Koen and Kreft, Holger and Kühn, Ingolf and Kumarathunge, Dushan and Kuppler, Jonas and Kurokawa, Hiroko and Kurosawa, Yoko and Kuyah, Shem and Laclau, Jean Paul and Lafleur, Benoit and Lallai, Erik and Lamb, Eric and Lamprecht, Andrea and Larkin, Daniel J. and Laughlin, Daniel and Le Bagousse-Pinguet, Yoann and le Maire, Guerric and le Roux, Peter C. and le Roux, Elizabeth and Lee, Tali and Lens, Frederic and Lewis, Simon L. and Lhotsky, Barbara and Li, Yuanzhi and Li, Xine and Lichstein, Jeremy W. and Liebergesell, Mario and Lim, Jun Ying and Lin, Yan Shih and Linares, Juan Carlos and Liu, Chunjiang and Liu, Daijun and Liu, Udayangani and Livingstone, Stuart and Llusià, Joan and Lohbeck, Madelon and López-García, Álvaro and Lopez-Gonzalez, Gabriela and Lososová, Zdeňka and Louault, Frédérique and Lukács, Balázs A. and Lukeš, Petr and Luo, Yunjian and Lussu, Michele and Ma, Siyan and Maciel Rabelo Pereira, Camilla and Mack, Michelle and Maire, Vincent and Mäkelä, Annikki and Mäkinen, Harri and Malhado, Ana Claudia Mendes and Mallik, Azim and Manning, Peter and Manzoni, Stefano and Marchetti, Zuleica and Marchino, Luca and Marcilio-Silva, Vinicius and Marcon, Eric and Marignani, Michela and Markesteijn, Lars and Martin, Adam and Martínez-Garza, Cristina and Martínez-Vilalta, Jordi and Mašková, Tereza and Mason, Kelly and Mason, Norman and Massad, Tara Joy and Masse, Jacynthe and Mayrose, Itay and McCarthy, James and McCormack, M. Luke and McCulloh, Katherine and McFadden, Ian R. and McGill, Brian J. and McPartland, Mara Y. and Medeiros, Juliana S. and Medlyn, Belinda and Meerts, Pierre and Mehrabi, Zia and Meir, Patrick and Melo, Felipe P.L. and Mencuccini, Maurizio and Meredieu, Céline and Messier, Julie and Mészáros, Ilona and Metsaranta, Juha and Michaletz, Sean T. and Michelaki, Chrysanthi and Migalina, Svetlana and Milla, Ruben and Miller, Jesse E.D. and Minden, Vanessa and Ming, Ray and Mokany, Karel and Moles, Angela T. and Molnár, Attila and Molofsky, Jane and Molz, Martin and Montgomery, Rebecca A. and Monty, Arnaud and Moravcová, Lenka and Moreno-Martínez, Alvaro and Moretti, Marco and Mori, Akira S. and Mori, Shigeta and Morris, Dave and Morrison, Jane and Mucina, Ladislav and Mueller, Sandra and Muir, Christopher D. and Müller, Sandra Cristina and Munoz, François and Myers-Smith, Isla H. and Myster, Randall W. and Nagano, Masahiro and Naidu, Shawna and Narayanan, Ayyappan and Natesan, Balachandran and Negoita, Luka and Nelson, Andrew S. and Neuschulz, Eike Lena and Ni, Jian and Niedrist, Georg and Nieto, Jhon and Niinemets, Ülo and Nolan, Rachael and Nottebrock, Henning and Nouvellon, Yann and Novakovskiy, Alexander and Nystuen, Kristin Odden and O'Grady, Anthony and O'Hara, Kevin and O'Reilly-Nugent, Andrew and Oakley, Simon and Oberhuber, Walter and Ohtsuka, Toshiyuki and Oliveira, Ricardo and Öllerer, Kinga and Olson, Mark E. and Onipchenko, Vladimir and Onoda, Yusuke and Onstein, Renske E. and Ordonez, Jenny C. and Osada, Noriyuki and Ostonen, Ivika and Ottaviani, Gianluigi and Otto, Sarah and Overbeck, Gerhard E. and Ozinga, Wim A. and Pahl, Anna T. and Paine, C. E.Timothy and Pakeman, Robin J. and Papageorgiou, Aristotelis C. and Parfionova, Evgeniya and Pärtel, Meelis and Patacca, Marco and Paula, Susana and Paule, Juraj and Pauli, Harald and Pausas, Juli G. and Peco, Begoña and Penuelas, Josep and Perea, Antonio and Peri, Pablo Luis and Petisco-Souza, Ana Carolina and Petraglia, Alessandro and Petritan, Any Mary and Phillips, Oliver L. and Pierce, Simon and Pillar, Valério D. and Pisek, Jan and Pomogaybin, Alexandr and Poorter, Hendrik and Portsmuth, Angelika and Poschlod, Peter and Potvin, Catherine and Pounds, Devon and Powell, A. Shafer and Power, Sally A. and Prinzing, Andreas and Puglielli, Giacomo and Pyšek, Petr and Raevel, Valerie and Rammig, Anja and Ransijn, Johannes and Ray, Courtenay A. and Reich, Peter B. and Reichstein, Markus and Reid, Douglas E.B. and Réjou-Méchain, Maxime and de Dios, Victor Resco and Ribeiro, Sabina and Richardson, Sarah and Riibak, Kersti and Rillig, Matthias C. and Riviera, Fiamma and Robert, Elisabeth M.R. and Roberts, Scott and Robroek, Bjorn and Roddy, Adam and Rodrigues, Arthur Vinicius and Rogers, Alistair and Rollinson, Emily and Rolo, Victor and Römermann, Christine and Ronzhina, Dina and Roscher, Christiane and Rosell, Julieta A. and Rosenfield, Milena Fermina and Rossi, Christian and Roy, David B. and Royer-Tardif, Samuel and Rüger, Nadja and Ruiz-Peinado, Ricardo and Rumpf, Sabine B. and Rusch, Graciela M. and Ryo, Masahiro and Sack, Lawren and Saldaña, Angela and Salgado-Negret, Beatriz and Salguero-Gomez, Roberto and Santa-Regina, Ignacio and Santacruz-García, Ana Carolina and Santos, Joaquim and Sardans, Jordi and Schamp, Brandon and Scherer-Lorenzen, Michael and Schleuning, Matthias and Schmid, Bernhard and Schmidt, Marco and Schmitt, Sylvain and Schneider, Julio V. and Schowanek, Simon D. and Schrader, Julian and Schrodt, Franziska and Schuldt, Bernhard and Schurr, Frank and Selaya Garvizu, Galia and Semchenko, Marina and Seymour, Colleen and Sfair, Julia C. and Sharpe, Joanne M. and Sheppard, Christine S. and Sheremetiev, Serge and Shiodera, Satomi and Shipley, Bill and Shovon, Tanvir Ahmed and Siebenkäs, Alrun and Sierra, Carlos and Silva, Vasco and Silva, Mateus and Sitzia, Tommaso and Sjöman, Henrik and Slot, Martijn and Smith, Nicholas G. and Sodhi, Darwin and Soltis, Pamela and Soltis, Douglas and Somers, Ben and Sonnier, Grégory and Sørensen, Mia Vedel and Sosinski, Enio Egon and Soudzilovskaia, Nadejda A. and Souza, Alexandre F. and Spasojevic, Marko and Sperandii, Marta Gaia and Stan, Amanda B. and Stegen, James and Steinbauer, Klaus and Stephan, Jörg G. and Sterck, Frank and Stojanovic, Dejan B. and Strydom, Tanya and Suarez, Maria Laura and Svenning, Jens Christian and Svitková, Ivana and Svitok, Marek and Svoboda, Miroslav and Swaine, Emily and Swenson, Nathan and Tabarelli, Marcelo and Takagi, Kentaro and Tappeiner, Ulrike and Tarifa, Rubén and Tauugourdeau, Simon and Tavsanoglu, Cagatay and te Beest, Mariska and Tedersoo, Leho and Thiffault, Nelson and Thom, Dominik and Thomas, Evert and Thompson, Ken and Thornton, Peter E. and Thuiller, Wilfried and Tichý, Lubomír and Tissue, David and Tjoelker, Mark G. and Tng, David Yue Phin and Tobias, Joseph and Török, Péter and Tarin, Tonantzin and Torres-Ruiz, José M. and Tóthmérész, Béla and Treurnicht, Martina and Trivellone, Valeria and Trolliet, Franck and Trotsiuk, Volodymyr and Tsakalos, James L. and Tsiripidis, Ioannis and Tysklind, Niklas and Umehara, Toru and Usoltsev, Vladimir and Vadeboncoeur, Matthew and Vaezi, Jamil and Valladares, Fernando and Vamosi, Jana and van Bodegom, Peter M. and van Breugel, Michiel and Van Cleemput, Elisa and van de Weg, Martine and van der Merwe, Stephni and van der Plas, Fons and van der Sande, Masha T. and van Kleunen, Mark and Van Meerbeek, Koenraad and Vanderwel, Mark and Vanselow, Kim André and Vårhammar, Angelica and Varone, Laura and Vasquez Valderrama, Maribel Yesenia and Vassilev, Kiril and Vellend, Mark and Veneklaas, Erik J. and Verbeeck, Hans and Verheyen, Kris and Vibrans, Alexander and Vieira, Ima and Villacís, Jaime and Violle, Cyrille and Vivek, Pandi and Wagner, Katrin and Waldram, Matthew and Waldron, Anthony and Walker, Anthony P. and Waller, Martyn and Walther, Gabriel and Wang, Han and Wang, Feng and Wang, Weiqi and Watkins, Harry and Watkins, James and Weber, Ulrich and Weedon, James T. and Wei, Liping and Weigelt, Patrick and Weiher, Evan and Wells, Aidan W. and Wellstein, Camilla and Wenk, Elizabeth and Westoby, Mark and Westwood, Alana and White, Philip John and Whitten, Mark and Williams, Mathew and Winkler, Daniel E. and Winter, Klaus and Womack, Chevonne and Wright, Ian J. and Wright, S. Joseph and Wright, Justin and Pinho, Bruno X. and Ximenes, Fabiano and Yamada, Toshihiro and Yamaji, Keiko and Yanai, Ruth and Yankov, Nikolay and Yguel, Benjamin and Zanini, Kátia Janaina and Zanne, Amy E. and Zelený, David and Zhao, Yun Peng and Zheng, Jingming and Zheng, Ji and Ziemińska, Kasia and Zirbel, Chad R. and Zizka, Georg and Zo-Bi, Irié Casimir and Zotz, Gerhard and Wirth, Christian},
 	year = {2020},
 	pmid = {31891233},
-	keywords = {data coverage, data integration, data representativeness, functional diversity, plant traits, TRY plant trait database},
+	keywords = {functional diversity, data representativeness, plant traits, data integration, data coverage, TRY plant trait database},
 	pages = {119--188},
 	file = {Kattge et al. - 2020 - TRY plant trait database – enhanced coverage and o.pdf:/home/miquel/Zotero/storage/NTQ9QNKL/Kattge et al. - 2020 - TRY plant trait database – enhanced coverage and o.pdf:application/pdf},
+}
+
+@article{kindt_worldflora_2020,
+	title = {{WorldFlora}: {An} {R} package for exact and fuzzy matching of plant names against the {World} {Flora} {Online} taxonomic backbone data},
+	volume = {8},
+	copyright = {© 2020 Kindt. Applications in Plant Sciences published by Wiley Periodicals LLC on behalf of Botanical Society of America},
+	issn = {2168-0450},
+	shorttitle = {{WorldFlora}},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/aps3.11388},
+	doi = {10.1002/aps3.11388},
+	abstract = {Premise The standardization of plant names is a critical step in various fields of biology, including biodiversity, biogeography, and vegetation research. The WorldFlora package is introduced here to help achieve this goal by matching lists of plant names with a static copy from World Flora Online (WFO), an ongoing global effort to complete an online flora of all known vascular plants and bryophytes by 2020. Methods and Results Based on direct and fuzzy matching, WorldFlora inserts matching cases from the WFO to a submitted data set containing taxonomic names. The results and success rates for selecting the expected best single matches are presented for four data sets, including two data sets used in recent comparisons of software tools for correcting taxon names. Conclusions WorldFlora offers a straightforward pipeline for semi-automatic plant name checking. For the four data sets, the success rate of credible matches ranged from 94.7\% to 99.9\%.},
+	language = {en},
+	number = {9},
+	urldate = {2024-05-29},
+	journal = {Applications in Plant Sciences},
+	author = {Kindt, Roeland},
+	year = {2020},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/aps3.11388},
+	keywords = {biodiversity informatics, online flora, plant name identification, species name matching, spelling errors, taxonomic databases},
+	pages = {e11388},
+	file = {Full Text PDF:/home/miquel/Zotero/storage/SFHALUCR/Kindt - 2020 - WorldFlora An R package for exact and fuzzy match.pdf:application/pdf;Snapshot:/home/miquel/Zotero/storage/YWDH96N7/aps3.html:text/html},
 }
